// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: branches not enabled 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h1
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h1>
  </div>
  <PreRequisitesStep
    alm="bitbucket"
    branchesEnabled={false}
    onChangeSkipNextTime={[Function]}
    onDone={[Function]}
    onOpen={[Function]}
    open={true}
    skipNextTime={false}
  />
  <PipelineStep
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
  />
  <WebhookStep
    branchesEnabled={false}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      Object {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <Connect(withAppState(JenkinsfileStep))
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    open={false}
  />
</Fragment>
`;

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h1
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h1>
  </div>
  <PreRequisitesStep
    alm="bitbucket"
    branchesEnabled={true}
    onChangeSkipNextTime={[Function]}
    onDone={[Function]}
    onOpen={[Function]}
    open={true}
    skipNextTime={false}
  />
  <MultiBranchPipelineStep
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      Object {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <WebhookStep
    branchesEnabled={true}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      Object {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <Connect(withAppState(JenkinsfileStep))
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    open={false}
  />
</Fragment>
`;

exports[`should render correctly: unsupported alm 1`] = `
<Alert
  variant="error"
>
  onboarding.tutorial.with.jenkins.unsupported
</Alert>
`;
